--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manasi-react-portfolio",
+  "name": "cv",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://manasikhandekar9.github.io/cv",
